Add test support